syntax = "proto3";
package review;

option go_package = "./review";

message EmptyResponse {
  int32 status_code = 1;
}

message DeleteRequest {
  int64 review_id = 1;
}

message GetRequest {
  int64 review_id = 1;
}

message GetByBookIdRequest {
  int64 book_id = 1;
}

message ReviewItem {
  int64 id = 1;
  int64 user_id = 2;
  int64 book_id = 3;
  int64 created_at = 4;
  string title = 5;
  string text = 6;
  int32 score = 7;
}

message GetByBookIdResponse {
  repeated ReviewItem reviews = 1;
  int32 status_code = 2;
}

message GetResponse {
  int64 id = 1;
  int64 user_id = 2;
  int64 book_id = 3;
  int64 created_at = 4;
  string title = 5;
  string text = 6;
  int32 score = 7;
  int32 status_code = 8;
}

message UpdateRequest {
  int64 id = 1;
  string title = 3;
  string text = 4;
  int32 score = 5;
}

message CreateRequest {
  int64 user_id = 1;
  int64 book_id = 2;
  string title = 3;
  string text = 4;
  int32 score = 5;
}

message CreateResponse {
  int64 review_id = 1;
  int32 status_code = 2;
}
